...
        
        self.cvOnboarding.isScrollEnabled = false
        self.cvOnboarding.showsVerticalScrollIndicator = false
        self.cvOnboarding.showsHorizontalScrollIndicator = false
        
        self.navigationItem.leftBarButtonItem = UIBarButtonItem(
            title: "SKIP",
            style: .plain,
            target: self,
            action: #selector(onTapSkip)
        )
        
        pgcOnboarding.pageIndicatorTintColor = .systemGray2
...
