...
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OVs-4P-qyu">
                                        <rect key="frame" x="0.0" y="0.0" width="167.5" height="50"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wmR-2D-lv8">
                                                <rect key="frame" x="0.0" y="0.0" width="68" height="50"/>
                                                <state key="normal" title="Button"/>
                                                <buttonConfiguration key="configuration" style="plain" title="BACK"/>
                                            </button>
                                        </subviews>
                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                        <constraints>
                                            <constraint firstItem="wmR-2D-lv8" firstAttribute="leading" secondItem="OVs-4P-qyu" secondAttribute="leading" id="A6a-WT-T27"/>
                                            <constraint firstAttribute="bottom" secondItem="wmR-2D-lv8" secondAttribute="bottom" id="Rs6-Jl-8n7"/>
...
